--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
   <div id="loading-screen">Loading IGDTUW Campus...</div>
 
   <!-- Sidebar Navigation -->
-  <div id="sidebar">
-    <h1>IGDTUW Campus Map</h1>
-    <input type="text" id="search-box" placeholder="Search for a building..." />
-    <ul id="search-suggestions"></ul>
-    <button id="reset-navigation">Reset Navigation</button>
+  <div class="navigation-controls">
+    <div class="search-container">
+      <input type="text" id="search-box" class="search-input" placeholder="Search buildings..." />
+      <ul id="search-suggestions"></ul>
+    </div>
+    <button id="reset-navigation" class="nav-button">Reset View</button>
   </div>
 
   <!-- Tooltip -->
